manifests/captain-gemini/captain-gemini-microservice.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: captain-gemini-service
    stack: frontend
  name: captain-gemini-service
  namespace: default
spec:
  selector:
    source: demo
    app: captain-gemini
  ports:
    -   name: web
        protocol: TCP
        port: 30201
        targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    stack: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /captain-gemini$1$2
  name: captain-gemini-ingress-path
  namespace: default
spec:
  rules:
    - http:
        paths:
          -   path: /captain-gemini(/|$)(.*)
              pathType: Prefix
              backend:
                service:
                  name: captain-gemini-service
                  port:
                    number: 30201
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: captain-gemini
    stack: frontend
    source: demo
  name: captain-gemini
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: captain-gemini
  template:
    metadata:
      labels:
        app: captain-gemini
        run: captain-gemini
        source: demo
      namespace: default
    spec:
      containers:
        -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/captain-gemini
            name: captain-gemini
            ports:
              -   name: web
                  containerPort: 9000
